<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoScreenOnOff</string>
    <string name="setting_name">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="turn_autoscreen_on">Turn AutoScreen ON</string>
    <string name="turn_autoscreen_off">Turn AutoScreen OFF</string>
    <string name="device_management_explanation">Need this privilege to turn off the screen</string>
    <string name="widget_title">Screen OnOff</string>

    <string name="pref_auto_setting">Auto Screen Settings</string>
    <string name="pref_power_setting">Power Settings</string>
    <string name="pref_advanced_setting">Advanced</string>

    <string name="pref_summary_charging_on">only works during charging.</string>
    <string name="pref_title_charging_on">Only when plugged</string>

    <string name="pref_summary_auto_on">Screen On/Off automatically</string>
    <string name="pref_title_auto_on">Enable</string>
    <string name="uninstall_app">Uninstall</string>

    <string name="title_playstore">Rank my App!</string>
    <string name="title_codesite">goto GitHub</string>
    <string name="title_about">About</string>
    <string name="title_changelog">What\'s New</string>

    <string name="pref_summary_disable_in_landscape">Useful for taking photos or watching movies in landscape.</string>
    <string name="pref_title_disable_in_landscape">Temporarily Disable in Landscape</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message" formatted="false">%s\nv%s</string>

    <string name="pref_summary_timeout_lock">Delay how long before Screen Off take effects. \n\nCurrent setting:%s</string>
    <string name="pref_title_timeout_lock">Screen Off Timeout Value</string>

    <string name="pref_summary_timeout_unlock">Delay how long before Screen On take effects. \n\nCurrent setting:%s</string>
    <string name="pref_title_timeout_unlock">Screen On Timeout Value</string>

    <string name="pref_summary_partiallock">ONLY WORKS on SOME devices. On other devices, the on/off function will not work well. Try by yourself.</string>
    <string name="pref_title_partiallock">Power Save Mode</string>

    <string name="timeout_same">Same as Lock Timeout Value</string>
    <string name="timeout_0">Right Away</string>
    <string name="timeout_05">0.5 sec</string>
    <string name="timeout_1">1 sec</string>
    <string name="timeout_2">2 sec</string>
    <string name="timeout_3">3 sec</string>
    <string name="timeout_10">10 sec</string>
    <string name="timeout_4">Swipe Twice</string>
    <string name="timeout_5">Never</string>

    <string-array name="timeout_lock_entries">
        <item>@string/timeout_0</item>
        <item>@string/timeout_05</item>
        <item>@string/timeout_1</item>
        <item>@string/timeout_2</item>
        <item>@string/timeout_3</item>
        <item>@string/timeout_10</item>
        <item>@string/timeout_4</item>
        <item>@string/timeout_5</item>
    </string-array>

    <!-- no translation -->
    <string-array name="timeout_lock_values">
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>10000</item>
        <!-- swipe twice -->
        <item>2</item>
        <!-- never -->
        <item>10</item>
    </string-array>

    <string-array name="timeout_unlock_entries">
        <item>@string/timeout_same</item>
        <item>@string/timeout_0</item>
        <item>@string/timeout_05</item>
        <item>@string/timeout_1</item>
        <item>@string/timeout_2</item>
        <item>@string/timeout_3</item>
        <item>@string/timeout_10</item>
        <item>@string/timeout_4</item>
        <item>@string/timeout_5</item>
    </string-array>

    <!-- no translation -->
    <string-array name="timeout_unlock_values">
        <item>-1</item>
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>10000</item>
        <!-- swipe twice -->
        <item>2</item>
        <!-- never -->
        <item>10</item>
    </string-array>

    <string name="dlg_uninstall_title">Uninstall App</string>
    <string name="dlg_uninstall_message">Do you really want to uninstall this app?</string>

    <string name="changelog_27">
        <![CDATA[
        <b>Version 2.7 (2015/02/06)</b>
        <ul>
        <li> disable functions while in call</li>
        <li> fix exclude-app list not working in Android 5</li>
        <li> try to fix sleep timer issue</li>
        </ul>
        ]]>
    </string>
    <string name="changelog_26">
        <![CDATA[
        <b>Version 2.6 (2014/07/22)</b>
        <ul>
        <li> Another long awaited feature! Now you can <font color=\"red\">add a Screen Off widget on your home!</font></li>
        </ul>
        ]]>
    </string>
    <string name="old_changelog_html">
        <![CDATA[
        <b>Version 2.5 (2014/07/19)</b>
        <ul>
        <li> long awaited feature! Now you can select which apps to exclude!</li>
        </ul>
        <b>Version 2.4.2 (2014/07/06)</b>
        <ul>
        <li> add German, Russian, Ukranian translations, Thanks to Paul L. Scholz, and Andrew</li>
        </ul>
        <b>Version 2.4.1 (2014/03/16)</b>
        <ul>
        <li> fix crash on Android 2.2, 2.4</li>
        </ul>
        <b>Version 2.4 (2014/02/15)</b>
        <ul>
         <li>Remove testing unlock feature</li>
         <li>fix crashes on some devices</li>
        </ul>
        <b>Version 2.3 (2014/02/14)</b>
        <ul>
         <li>Add Dutch translation: Thanks for Xander Stone\'s help</li>
         <li>Improvement: Add Vibrate while turning off screen.</li>
         <li>Improvement: make Uninstall action more visible on Actionbar. Don\'t mail me how to uninstall anymore...</li>
         <li>Improvement: make time picker 24 hour format. Should be more useful.</li>
        </ul>
        <b>Version 2.2 (2013/12/02)</b>
        <ul>
         <li>Improvement: Add swipe feature. You can set up in Timeout settings.</li>
         <li>Improvement: Add Disable TurnOn or TurnOff feature. in Timeout settings too.</li>
        </ul>
        <b>Version 2.1.0 (2013/08/19):</b>
        <ul>
         <li>Improvement: It\'s possible to hear cover close sound now</li>
         <li>Add French translation: Thanks for Geoffrey Frogeye\' help</li>
        </ul>
        <b>Version 2.0.10 (2013/08/04):</b>
        <ul>
         <li>Improvement: Improves sensitivity of Landscape disabling</li>
         <li>Add Vietnamese translation: Thanks for Hai Long Hoang\' help</li>
        </ul>
        <b>Version 2.0.9 (2013/07/04):</b>
        <ul>
         <li>Issue Fix: Turning on feature, and scroll settings, it will cause turn off feature (Google\'s issue)</li>
        </ul>
        <b>Version 2.0.8 (2013/06/30):</b>
        <ul>
         <li>Feature: Add Power Save Mode. ONLY Works on Some devices. If it makes screen on/off not working. Don\'t use it.</li>
         <li>Issue Fix: Sleeping time not working, after rebooting the device.</li>
         <li>Issue Fix: Auto turn on Screen (but turn off right away) should work normally on Samsung devices now. I hope so, since I don\'t have one to verify.</li>
        </ul>
        <b>Version 2.0.7 (2013/06/20):</b>
        <ul>
         <li>Add partial wakelock back</li>
        </ul>
        <b>Version 2.0.6 (2013/06/19):</b>
        <ul>
         <li>Reduce power consumption by removing partial wakelock</li>
        </ul>
        <b>Version 2.0.5 (2013/06/15):</b>
        <ul>
         <li>Issue fix: When sleep time is up, the function is not enabled again.</li>
        </ul>
        <b>Version 2.0.4 (2013/06/13):</b>
        <ul>
         <li>Issue fix: fix crash issue on android 2.x devices.</li>
        </ul>
        <b>Version 2.0.3 (2013/06/11):</b>
        <ul>
         <li>Fine tuning: fine tune sensor parameter in order to save more power.</li>
        </ul>
        <b>Version 2.0.2 (2013/06/10):</b>
        <ul>
         <li>Issue fix: some people may encounter notification not working issue. it\'s fixed in this version</li>
         <li>Restart service after upgrading app.</li>
        </ul>
        <b>Version 2.0.1 (2013/06/08):</b>
        <ul>
         <li>Issue fix: if you are using Android 2.x devices, make sure you update this version, so that notification can work for you.</li>
         <li>Move \"Uninstall App\" button to actionbar; make room for preferences.</li>
        </ul>
        <b>Version 2.0 (2013/06/07):</b>
        <ul>
         <li>Add notification: now you can toggle the feature more conveniently!</li>
        </ul>
        <b>Version 1.9:</b>
        <ul>
         <li>Largely shrink the app file size by removing unwanted libs</li>
         <li>Add sleep time settings, to better reduce power consumption.</li>
         <li>Change application logo icon</li>
         <li>Issue fix: sometimes \"Enable while plugged\" can\'t function well.</li>
        </ul>
        <b>Version 1.8:</b>
        <ul>
         <li>works after rebooting the device. You don\'t have to manually turn on the function again.</li>
         <li>A version changelog dialog is added. Every time a new version arrives, it\'s easier for you to know what\'s been added.</li>
         <li>Timeout value can be correctly updated now!</li>
        </ul>
        ]]>
    </string>

    <string name="pref_sleep_setting">Sleep Time Setting (Beta)</string>
    <string name="pref_summary_sleeping">to save power consumption.(Still buggy. report to me if you find bugs.)</string>
    <string name="pref_title_sleeping">Disable while Sleep</string>
    <string name="sleep_start_title">Sleep Start Time</string>
    <string name="sleep_stop_title">Sleep End Time</string>

    <string name="pref_summary_show_notification">Faster toggle;also including screen off button</string>
    <string name="pref_title_show_notification">Show Notification</string>
    <string name="statusbar_charging">Charging! AutoScreen is enabled.</string>
    <string name="statusbar_autoscreen_on">AutoScreen is enabled.</string>
    <string name="statusbar_autoscreen_off">AutoScreen is disabled.</string>

    <!-- no translation -->
    <string name="author_url">https://github.com/plateaukao/PowerOff</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=com.danielkao.autoscreenonoff</string>

    <string name="pref_play_close_sound">Play sound while auto turning off screen</string>
    <string name="pref_title_play_close_sound">Play Sound While Close</string>
    <string name="pref_vibrate_while_close">Vibrate while auto turning off screen</string>
    <string name="pref_title_vibrate_while_close">Vibrate While Close</string>

    <string name="pref_title_exclude_apps">which apps to exclude</string>
    <string-array name="empty_array" />

    <!-- toggle strategy -->
    <string name="pref_onoff_related">On/Off Related Settings</string>

    <string name="send_feedback">Send feedback</string>
    <string name="no_mail_client_warning">There are no email clients installed.</string>
    <string name="feedback_subject">Feedback to autoscreenonoff app</string>
</resources>
