<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_auto_setting" >
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefAutoOn"
                android:summary="@string/pref_summary_auto_on"
                android:title="@string/pref_title_auto_on" >
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefDisableInLandscape"
                android:summary="@string/pref_summary_disable_in_landscape"
                android:title="@string/pref_title_disable_in_landscape" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_power_setting" >
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefChargingOn"
                android:summary="@string/pref_summary_charging_on"
                android:title="@string/pref_title_charging_on" >
        </CheckBoxPreference>
    </PreferenceCategory>


</PreferenceScreen>