<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_changelog"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/title_changelog" />
    <item android:id="@+id/menu_code_url"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/title_codesite" />
    <item android:id="@+id/menu_playstore_url"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/title_playstore" />
    <item android:id="@+id/menu_uninstall_app"
          android:icon="@android:drawable/ic_menu_delete"
          android:showAsAction="always"
          android:title="@string/uninstall_app" />
    <item android:id="@+id/menu_send_feedback"
          android:icon="@android:drawable/ic_menu_send"
          android:title="@string/send_feedback" />
    <item android:id="@+id/menu_about"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/title_about" />
</menu>